...
        homeNC.tabBarItem.selectedImage = UIImage(named: "icons8-Home Filled")
        
        // Chats
        let chatsVC = ChatsViewController(style: .plain)
	    loginVC.delegates?.append(chatsVC)
        let chatsNC = UINavigationController(rootViewController: chatsVC)
        chatsNC.tabBarItem.title = "Chats"
        chatsNC.tabBarItem.image = UIImage(named: "icons8-Speech Bubble")
        chatsNC.tabBarItem.selectedImage = UIImage(named: "icons8-Speech Bubble Filled")
        
        // Contacts
        let contactsVC = ContactsViewController(style: .plain)
        loginVC.delegates?.append(contactsVC)
...
